--- a/css/styles.css
+++ b/css/styles.css
@@ -364,6 +364,9 @@ h3 {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+
+  margin-top: 20px;
+  margin-left: 24px;
 }
 
 .example-type {
@@ -371,6 +374,7 @@ h3 {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
+  margin-left: 24px;
 }
 
 .conteiner-portfolio {
