--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,10 @@ body {
   list-style: none;
 }
 
+img {
+  display: block;
+}
+
 .conteiner {
   /* border: 2px dashed tomato; */
   padding-left: 15px;
@@ -46,12 +50,18 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 1200px;
-  margin-top: 94px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 /*Header*/
 .conteiner.header {
   display: flex;
   align-items: center;
+  border-bottom-width: 1px;
+  border-bottom-color: #ececec;
+  border-bottom-style: solid;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .header {
@@ -61,9 +71,12 @@ body {
 }
 
 /*site-nav*/
+.site-nav {
+  margin-left: 93px;
+}
+
 .site-nav-list {
   display: flex;
-  margin-left: 93px;
 }
 
 .site-nav-list .item:not(:last-child) {
@@ -129,20 +142,24 @@ p {
   background-color: var(--secondary-background-color);
 }
 
-.hero-section {
+.hero-title {
   letter-spacing: 0.06em;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
-  text-transform: uppercase;
-  padding-top: 200px;
-  padding-bottom: 280px;
-}
 
-.hero-title {
+  text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 29px;
+  max-width: 696px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hero-content {
+  padding-top: 200px;
+  padding-bottom: 200px;
+  text-align: center;
 }
 
 .hero-button {
@@ -171,6 +188,8 @@ p {
 
 .hero .conteiner {
   margin-top: 0;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 h2 {
@@ -205,7 +224,7 @@ h2 {
   width: 270px;
 }
 
-.features .item:nth-last-child(4) {
+.features .item:last-child {
   margin-right: 0;
 }
 
@@ -227,6 +246,10 @@ h2 {
 }
 
 /* Чем мы занимаемся */
+.conteiner.areas-of-work-cont {
+  padding-top: 0;
+}
+
 .areas-of-work {
   display: flex;
 }
@@ -242,10 +265,15 @@ h2 {
 
 .team-card {
   background-color: #fff;
-  margin-bottom: 94px;
+  margin-bottom: 0px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+.team-card-discription {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .team-card:not(:last-child) {
@@ -260,7 +288,7 @@ h2 {
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
-  margin-top: 30px;
+  margin-top: 0px;
 }
 
 .team-position {
@@ -269,7 +297,7 @@ h2 {
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 0px;
 }
 
 .section-team .conteiner {
@@ -290,8 +318,8 @@ h3 {
 
 .footer .conteiner {
   margin-top: 0px;
-  padding-bottom: 60px;
-  padding-top: 60px;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .logo-footer {
@@ -310,6 +338,8 @@ h3 {
   background-color: var(--secondary-background-color);
   font-size: 14px;
   line-height: 1.71;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer-contacts {
@@ -317,7 +347,6 @@ h3 {
   font-style: normal;
   text-decoration: none;
   display: inline-block;
-  margin-top: 9px;
 }
 
 .footer-contacts-address {
@@ -365,11 +394,15 @@ h3 {
   box-sizing: border-box;
 }
 
+.portfolio-exaples .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
 .portfolio-exaples .item:nth-child(3n) {
   margin-right: 0;
 }
 
-. .button-list .item + .item {
+.portfolio-exaples .item .button-list .item + .item {
   margin-left: 8px;
 }
 
@@ -402,12 +435,15 @@ h3 {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-
-  margin-top: 20px;
-  margin-left: 24px;
 }
 
-.example-type {
+.portfolio-card-discription {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+}
+
+. .example-type {
   color: var(--secondary-text-color);
   font-size: 16px;
   line-height: 1.87;
@@ -416,7 +452,6 @@ h3 {
 }
 
 .conteiner-portfolio {
-  /* border: 2px dashed tomato; */
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
