--- a/css/styles.css
+++ b/css/styles.css
@@ -390,7 +390,7 @@ h3 {
   margin-right: 30px;
   margin-bottom: 30px;
   background: #ffffff;
-  border: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
   box-sizing: border-box;
 }
 
