--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
-html {
+/* html {
   box-sizing: border-box;
-}
+} */
 
 :root {
   --accent-color: #2196f3;
@@ -39,22 +39,18 @@ img {
 }
 
 .conteiner {
-  /* border: 2px dashed tomato; */
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
   width: 1200px;
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
+
 /*Header*/
 .conteiner.header {
   display: flex;
   align-items: center;
-  border-bottom-width: 1px;
-  border-bottom-color: #ececec;
-  border-bottom-style: solid;
+
   padding-top: 0px;
   padding-bottom: 0px;
 }
@@ -63,6 +59,9 @@ img {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
+  border-bottom-width: 1px;
+  border-bottom-color: #ececec;
+  border-bottom-style: solid;
 }
 
 /*site-nav*/
@@ -132,9 +131,15 @@ p {
 /*Стили для index.html*/
 
 /*Герой*/
-.hero {
+
+.hero-section {
+  margin-top: 0;
+  padding-top: 200px;
+  padding-bottom: 200px;
+
   color: #ffffff;
   background-color: var(--secondary-background-color);
+  text-align: center;
 }
 
 .hero-title {
@@ -149,12 +154,6 @@ p {
   max-width: 696px;
   margin-left: auto;
   margin-right: auto;
-}
-
-.hero-content {
-  padding-top: 200px;
-  padding-bottom: 200px;
-  text-align: center;
 }
 
 .hero-button {
@@ -181,12 +180,6 @@ p {
   background-color: #188ce8;
 }
 
-.hero .conteiner {
-  margin-top: 0;
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
 h2 {
   font-weight: 700;
   font-size: 36px;
@@ -195,6 +188,10 @@ h2 {
 }
 
 /*Особенности*/
+.section-features {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
 .visually-hidden {
   position: absolute;
@@ -241,8 +238,9 @@ h2 {
 }
 
 /* Чем мы занимаемся */
-.conteiner.areas-of-work-cont {
+.section-areas-of-work {
   padding-top: 0;
+  padding-bottom: 94px;
 }
 
 .areas-of-work {
@@ -254,6 +252,12 @@ h2 {
 }
 
 /*Наша команда*/
+
+.section-team {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .team-list {
   display: flex;
 }
@@ -295,10 +299,6 @@ h2 {
   margin-bottom: 0px;
 }
 
-.section-team .conteiner {
-  padding-top: 94px;
-}
-
 .section-team-title {
   margin-bottom: 50px;
   margin-top: 0px;
@@ -311,10 +311,12 @@ h3 {
 
 /*Футер*/
 
-.footer .conteiner {
-  margin-top: 0px;
-  padding-top: 0;
-  padding-bottom: 0;
+.footer {
+  background-color: var(--secondary-background-color);
+  font-size: 14px;
+  line-height: 1.71;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .logo-footer {
@@ -327,14 +329,6 @@ h3 {
 
   display: block;
   margin-bottom: 20px;
-}
-
-.footer {
-  background-color: var(--secondary-background-color);
-  font-size: 14px;
-  line-height: 1.71;
-  padding-top: 60px;
-  padding-bottom: 60px;
 }
 
 .footer-contacts {
@@ -357,6 +351,12 @@ h3 {
 /*Стили для portfolio.css*/
 
 /*Фильтр*/
+
+.section-portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .button-list {
   display: flex;
   justify-content: center;
@@ -367,7 +367,7 @@ h3 {
   margin-left: 8px;
 }
 
-.button-list .item:only-child {
+.button-list .item:first-child {
   margin-left: 0px;
 }
 
@@ -443,17 +443,4 @@ h3 {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
-  margin-left: 24px;
-}
-
-.conteiner-portfolio {
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 94px;
-  padding-bottom: 94px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
-  margin-top: 0px;
-  margin-bottom: 0px;
 }
