--- a/css/styles.css
+++ b/css/styles.css
@@ -430,12 +430,14 @@ h3 {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 
 .portfolio-card-discription {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
+  padding-right: 24px;
 }
 
 .example-type {
